@@ -1,3 +1,9 @@
+2020-02-28 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_menu.c: Utilize macro:
+
+          * geda_get_container_border_width
+
 2020-02-27 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_label.c: Change first argument to draw_insertion_cursor
